--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ loader_version=0.12.12
 # Mod Properties
 mod_version=1.0.0
 maven_group=com.github.llamarama.team
-archives_base_name=gloopy-fabric-1.18.1
+archives_base_name=Gloopy
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.44.0+1.18
