--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,12 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.6
-loader_version=0.12.12
+org.gradle.jvmargs=-Xmx3G
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0
 maven_group=com.github.llamarama.team
 archives_base_name=Gloopy
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.44.0+1.18
+# Fabric Properties
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.13.3
+# Fabric api
+fabric_version=0.47.8+1.18.2
