--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
+
 # Mod Properties
-mod_version=1.1.0
-maven_group=com.github.llamarama.team
+mod_version=1.2.0
+maven_group=io.github.llamarama.team
 archives_base_name=Gloopy
-# Fabric Properties
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.1
-loader_version=0.13.3
-# Fabric api
-fabric_version=0.47.8+1.18.2
+
+# Core fabric deps
+minecraft_version=1.19
+yarn_mappings=1.19+build.2
+loader_version=0.14.7
+
+#Fabric api
+fabric_version=0.55.3+1.19
